@@ -1,6 +1,6 @@
 #! /bin/zsh
 # John Alan McDonald
-# 2015-12-03
+# 2018-12-17
 
 export JAVA_HOME=/usr
 
@@ -13,8 +13,9 @@ export SIZE=4g
 
 export XMX="-Xms${SIZE} -Xmx${SIZE}"
 
+export OPENS="--add-opens java.base/java.lang=ALL-UNNAMED"
 export CP="-cp ./src/scripts/clojure:lib/*"
 export ASSERT="-ea -da:org.geotools... -da:org.opengis..."
 export JAVA="${JAVA_HOME}/bin/java"
-export CLJ="${JAVA} -server ${ASSERT} ${GC} ${PROF} ${XMX} ${CP} clojure.main"
+export CLJ="${JAVA} -server ${ASSERT} ${GC} ${PROF} ${XMX} ${OPENS} ${CP} clojure.main"
 ${CLJ} $@
